Fix: Adjust z-index of dropdown container

--- a/php/public/css/matches.css
+++ b/php/public/css/matches.css
@@ -14,6 +14,7 @@
 .table th .dropdown {
     position: relative;
     display: inline-block;
+    z-index: 1030;
 }
 
 /* Scrollable menu */
